OPL-1423 Fixing terminology on the pipelien settings screen so that it makes it clear the repo is ONLY for webhook, indicating that individual steps use their own branch settings and just UI spacing cleanup.  NO FUNCTIONAL CHANGES

--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -351,6 +351,10 @@ input[disabled] {
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.step-configuration-summary {
+    color: #334152;
+}
+
 .vertical-tab-text {
     font-size: 1.25em;
 }
@@ -359,6 +363,18 @@ input[disabled] {
 .select-input-error {
     box-shadow: 0 0 3px #CC0000;
     border-radius: 5px;
+}
+
+.custom-select-input {
+    padding-bottom: 10px;
+}
+
+.object-properties-input {
+    padding-bottom: 10px;
+}
+
+.input-container {
+    padding-bottom: 10px;
 }
 
 /* End Error State CSS */
